feat: реализовать получение списка всех подключенных устройств через WebSocket
